manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helep
  labels:
    name: helep
    app.kubernetes.io/part-of: helep
