manifests/kafka-simple-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
            - containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: helep-kafka-kafka-bootstrap
  namespace: kafka
spec:
  selector:
    app: kafka
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
